# stm32_elf

./: .gitignore  .gitmodules  CMakeLists.txt  genld  stm32f103c8_blue_pill.cfg
cmake/: stm32f765.cmake
progs/: Makefile  calc.c  hello.c  notes.txt  some_tests.c
py_scripts/: build_image.py  hostfs_server.py
src/: exec.c  fs.c  fs_test.c  fs_test.h  main.c  opencm3_freertos.c  usb_cdc.c  usb_cdc.h  usb_fs.c  usb_request.c
src/include/: FreeRTOSConfig.h  exec.h  fs.h  usb_fs.h  usb_request.h
src/ld/: basic.stm32.ld
